# Apricot-Linear-Library

./: .gitignore  .travis.yml  ApricotTest  CMakeLists.txt  README.md  apricotLine.cpp  apricotLine.h  apricotMatrix.cpp  apricotMatrix.h  apricotVector.cpp  apricotVector.h  ci-build-test  documentation  main.cpp  makefile
include/: apricotVector.h
src/: apricotLine.cpp  apricotMatrix.cpp  apricotVector.cpp  main.cpp
